--- a/app/src/main/res/layout/mainpage.xml
+++ b/app/src/main/res/layout/mainpage.xml
@@ -86,6 +86,17 @@
             android:textSize="20dp"
             android:layout_marginRight="10dp"
             android:text="이체" />
+        <Button
+            android:id="@+id/logoutBtn"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/bin_blue"
+            android:textColor="#ffffff"
+            android:textSize="20dp"
+            android:layout_marginRight="10dp"
+            android:text="로그아웃" />
     </LinearLayout>
 
     <LinearLayout
