--- a/app/src/main/res/layout/qr_pay.xml
+++ b/app/src/main/res/layout/qr_pay.xml
@@ -59,7 +59,8 @@
                 android:id="@+id/spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp" />
+                android:layout_marginTop="5dp"
+                android:spinnerMode="dropdown"/>
 
             <TextView
                 android:id="@+id/textView4"
