폴더정리, 계좌 관련 메소드 추가

--- a/app/src/main/res/layout/qr_pay.xml
+++ b/app/src/main/res/layout/qr_pay.xml
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="690dp"
         android:orientation="vertical"
-        tools:context=".CreateQR">
+        tools:context=".qr.CreateQR">
 
         <ImageView
             android:id="@+id/qrcode"
