--- a/app/src/main/res/layout/fragment_deposit_lsit.xml
+++ b/app/src/main/res/layout/fragment_deposit_lsit.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        app:srcCompat="@drawable/hdpay_text" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="오늘까지 소비/수입"
+            android:textColor="#000000"
             android:textSize="20dp"
 
             />
@@ -25,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="-555,555"
+            android:textColor="#000000"
             android:fontFamily="@font/gmarket_sans_b"
             android:textSize="40dp" />
 
@@ -33,6 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="+150,000"
+            android:textColor="#368AFF"
             android:fontFamily="@font/gmarket_sans_b"
             android:textSize="40dp" />
 
@@ -45,8 +55,6 @@
         android:background="#555555"
         />
 
-    <ListView
-        android:id="@+id/"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+
+
 </LinearLayout>
