--- a/app/src/main/res/layout/fragment_pay_lsit.xml
+++ b/app/src/main/res/layout/fragment_pay_lsit.xml
@@ -48,14 +48,17 @@
 
     </LinearLayout>
 
-    <view
+    <View
         android:layout_width="match_parent"
         android:layout_height="2px"
-        android:layout_margin="20dp"
-        android:background="#555555"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
         />
 
     <ListView
+        android:id="@+id/payList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 </LinearLayout>
