--- a/app/src/main/res/layout/fragment_deposit_lsit.xml
+++ b/app/src/main/res/layout/fragment_deposit_lsit.xml
@@ -48,7 +48,7 @@
 
     </LinearLayout>
 
-    <view
+    <View
         android:layout_width="match_parent"
         android:layout_height="2px"
         android:layout_margin="20dp"
