--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -74,18 +74,7 @@
             android:layout_marginRight="20dp"
             android:text="로그인" />
 
-        <Button
-            android:id="@+id/biometric_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="지문 로그인"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="261dp" />
-
-        <ImageView
-            android:layout_width="wrap_content"
+       ut_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="10dp"
