--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -82,6 +82,9 @@
             android:layout_margin="10dp"
             android:text="지문 로그인"
             android:textSize="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/bin_blue"
             android:textColor="#ffffff"
             app:srcCompat="@drawable/hd_logo" />
